fix: align facebook etc icons

--- a/pages/main/style.css
+++ b/pages/main/style.css
@@ -754,15 +754,16 @@ footer .logo {
     flex-direction: row;
     margin: 5px;
 }
-.column1 .social-networks li .circle {
+li .circle {
+    display: flex;
     border: 0.5px solid rgba(196, 196, 196, 0.5);
     background-color: rgba(196, 196, 196, 0.5);
     border-radius: 50%;
 
     width: 26px;
     height: 26px;
-
 }
+
 
 .column1 .social-networks li a {
     margin: 5px;
@@ -771,7 +772,6 @@ footer .logo {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
 }
 .column2 nav {
     display: contents;
